--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>To-Do List (HTML + Bootstrap)</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
 </head>
-<body class="bg-light">
+
+<body class="fondo">
 
   <div class="container py-5">
     <div class="row justify-content-center">
       <div class="col-md-6">
 
         <div class="card shadow-sm">
-          <div class="card-header bg-primary text-white">
+          <div class="card-header bg text-white">
             <h4 class="mb-0">📝 To-Do List</h4>
           </div>
           <div class="card-body">
@@ -22,7 +25,7 @@
               <div class="input-group">
                 <input type="text" class="form-control" id="text-input" placeholder="Escribe una tarea...">
                 <button class="btn btn-primary" type="button" id="btn-ag">Agregar</button>
-                
+
                 <ul id="list" class="list-group">
                 </ul>
               </div>
@@ -36,75 +39,5 @@
 
   <script src="./To-Do.js"></script>
 </body>
+
 </html>
-
-
-
-            <!-- Lista de tareas estáticas -->
-            <!-- <ul class="list-group">
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                Terminar el proyecto
-                <span class="badge bg-success">Hecho</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                Estudiar para el examen
-                <span class="badge bg-warning text-dark">Pendiente</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                Llamar al cliente
-                <span class="badge bg-danger">Urgente</span>
-              </li>
-            </ul> -->
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-</head>
-
-<body>
-
-    <div class="container my-5 d-flex flex-column align-items-center border border-2 border-primary">
-        <h1 class="fw-bolder fst-italic my-5">To-Do List</h1>
-        <form>
-            <div class="d-flex flex-row">
-                <div class="mb-3">
-                    <input type="text" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="mx-2">
-                    <button type="button" class="btn btn-primary">Agregar</button>
-                </div>
-            </div>
-        </form>
-    </div>
-    
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
-        integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
-        crossorigin="anonymous"></script>
-</body>
-
-</html> -->
-
-
-
-
-
-<!-- <select class="form-select" aria-label="Default select example">
-  <option selected>Open this select menu</option>
-  <option value="1">One</option>
-  <option value="2">Two</option>
-  <option value="3">Three</option>
-</select> -->
